// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AcquisitionFunnelReport renders baseline report correctly 1`] = `
"<ReportSection name=\\"Acquisition Funnel\\">
  <Component report={{...}} />
  <Component>
    <Component report={{...}} type=\\"baseline\\" />
  </Component>
</ReportSection>"
`;

exports[`AcquisitionFunnelReport renders baseline report correctly 2`] = `
"<BoxRow spacing=\\"normal\\">
  <PercentageGraphBox name=\\"USV > EXE\\" infoTooltip=\\"usv_to_exe\\" value={0.003} target={[undefined]} delta={[undefined]} series={[undefined]} digits={2} />
  <PercentageGraphBox name=\\"Cancellation & Denial Rate\\" value={0.29} target={[undefined]} delta={[undefined]} series={[undefined]} />
  <PercentageGraphBox name=\\"Cost per Exe / Lowest Monthly Rent\\" infoTooltip=\\"cost_per_exe_lowest_monthly_rent\\" value={0.54} target={[undefined]} delta={[undefined]} series={[undefined]} extraContent=\\"$1,000 / $1,847\\" />
</BoxRow>"
`;

exports[`AcquisitionFunnelReport renders baseline report correctly 3`] = `
"<Component>
  <Component>
    <Component name=\\"Volume of Activity\\" />
    <Component>
      <FunnelNumberBox name=\\"Volume of USV\\" infoTooltip=\\"volume_of_usv\\" value={19621} target={2136} delta={[undefined]} targetFormatter={[Function: format4WeekAverage]} />
      <FunnelNumberBox name=\\"Volume of INQ\\" infoTooltip=\\"volume_of_inq\\" value={785} target={128} delta={[undefined]} targetFormatter={[Function: format4WeekAverage]} />
      <FunnelNumberBox name=\\"Volume of TOU\\" infoTooltip=\\"volume_of_tou\\" value={259} target={52} delta={[undefined]} targetFormatter={[Function: format4WeekAverage]} />
      <FunnelNumberBox name=\\"Volume of APP\\" infoTooltip=\\"volume_of_app\\" value={96} target={19} delta={[undefined]} targetFormatter={[Function: format4WeekAverage]} />
      <FunnelNumberBox name=\\"Volume of EXE\\" infoTooltip=\\"volume_of_exe\\" value={68} target={16} delta={[undefined]} targetFormatter={[Function: format4WeekAverage]} />
    </Component>
  </Component>
  <Component>
    <Component name=\\"Conversion Rate\\" />
    <Component>
      <FunnelPercentBox name=\\"USV → INQ\\" infoTooltip=\\"usv_to_inq\\" value={0.04} target={[undefined]} delta={[undefined]} />
      <FunnelPercentBox name=\\"INQ → TOU\\" infoTooltip=\\"inq_to_tou\\" value={0.33} target={[undefined]} delta={[undefined]} />
      <FunnelPercentBox name=\\"TOU → APP\\" infoTooltip=\\"tou_to_app\\" value={0.37} target={[undefined]} delta={[undefined]} />
      <FunnelPercentBox name=\\"APP → EXE\\" infoTooltip=\\"app_to_exe\\" value={0.71} target={[undefined]} delta={[undefined]} />
    </Component>
  </Component>
  <Component>
    <Component name=\\"Cost per Activity\\" />
    <Component>
      <FunnelCurrencyBox name=\\"Cost per USV\\" infoTooltip=\\"cost_per_usv\\" value=\\"3.47\\" target={[undefined]} delta={[undefined]} />
      <FunnelCurrencyBox name=\\"Cost per INQ\\" infoTooltip=\\"cost_per_inq\\" value=\\"86.62\\" target={[undefined]} delta={[undefined]} />
      <FunnelCurrencyBox name=\\"Cost per TOU\\" infoTooltip=\\"cost_per_tou\\" value=\\"262.00\\" target={[undefined]} delta={[undefined]} />
      <FunnelCurrencyBox name=\\"Cost per APP\\" infoTooltip=\\"cost_per_app\\" value=\\"708.00\\" target={[undefined]} delta={[undefined]} />
      <FunnelCurrencyBox name=\\"Cost per EXE\\" infoTooltip=\\"cost_per_exe\\" value=\\"1000.00\\" target={[undefined]} delta={[undefined]} />
    </Component>
  </Component>
</Component>"
`;

exports[`AcquisitionFunnelReport renders performance report correctly 1`] = `
"<ReportSection name=\\"Acquisition Funnel\\">
  <Component report={{...}} />
  <Component>
    <Component report={{...}} type=\\"performance\\" />
  </Component>
</ReportSection>"
`;

exports[`AcquisitionFunnelReport renders performance report correctly 2`] = `
"<BoxRow spacing=\\"normal\\">
  <PercentageGraphBox name=\\"USV > EXE\\" infoTooltip=\\"usv_to_exe\\" value={0.004} target={0.007} delta={-0.001} series={{...}} digits={2} />
  <PercentageGraphBox name=\\"Cancellation & Denial Rate\\" value={0.2} target={0.2} delta={0.03} series={{...}} />
  <PercentageGraphBox name=\\"Cost per Exe / Lowest Monthly Rent\\" infoTooltip=\\"cost_per_exe_lowest_monthly_rent\\" value={0.58} target={1.03} delta={-0.2} series={{...}} extraContent=\\"$1,077 / $1,857\\" />
</BoxRow>"
`;

exports[`AcquisitionFunnelReport renders performance report correctly 3`] = `
"<Component>
  <Component>
    <Component name=\\"Volume of Activity\\" />
    <Component>
      <FunnelNumberBox name=\\"Volume of USV\\" infoTooltip=\\"volume_of_usv\\" value={3008} target={2136} delta={423} targetFormatter={[Function]} />
      <FunnelNumberBox name=\\"Volume of INQ\\" infoTooltip=\\"volume_of_inq\\" value={150} target={128} delta={-19} targetFormatter={[Function]} />
      <FunnelNumberBox name=\\"Volume of TOU\\" infoTooltip=\\"volume_of_tou\\" value={57} target={52} delta={2} targetFormatter={[Function]} />
      <FunnelNumberBox name=\\"Volume of APP\\" infoTooltip=\\"volume_of_app\\" value={16} target={19} delta={-2} targetFormatter={[Function]} />
      <FunnelNumberBox name=\\"Volume of EXE\\" infoTooltip=\\"volume_of_exe\\" value={13} target={16} delta={-1} targetFormatter={[Function]} />
    </Component>
  </Component>
  <Component>
    <Component name=\\"Conversion Rate\\" />
    <Component>
      <FunnelPercentBox name=\\"USV → INQ\\" infoTooltip=\\"usv_to_inq\\" value={0.05} target={0.06} delta={-0.01} />
      <FunnelPercentBox name=\\"INQ → TOU\\" infoTooltip=\\"inq_to_tou\\" value={0.38} target={0.4} delta={0.01} />
      <FunnelPercentBox name=\\"TOU → APP\\" infoTooltip=\\"tou_to_app\\" value={0.28} target={0.36} delta={-0.02} />
      <FunnelPercentBox name=\\"APP → EXE\\" infoTooltip=\\"app_to_exe\\" value={0.8} target={0.8} delta={0.02} />
    </Component>
  </Component>
  <Component>
    <Component name=\\"Cost per Activity\\" />
    <Component>
      <FunnelCurrencyBox name=\\"Cost per USV\\" infoTooltip=\\"cost_per_usv\\" value=\\"4.32\\" target=\\"9.90\\" delta=\\"1.67\\" />
      <FunnelCurrencyBox name=\\"Cost per INQ\\" infoTooltip=\\"cost_per_inq\\" value=\\"86.67\\" target=\\"165.00\\" delta=\\"24.76\\" />
      <FunnelCurrencyBox name=\\"Cost per TOU\\" infoTooltip=\\"cost_per_tou\\" value=\\"246.00\\" target=\\"413.00\\" delta=\\"-120.00\\" />
      <FunnelCurrencyBox name=\\"Cost per APP\\" infoTooltip=\\"cost_per_app\\" value=\\"875.00\\" target=\\"1515.00\\" delta=\\"-202.00\\" />
      <FunnelCurrencyBox name=\\"Cost per EXE\\" infoTooltip=\\"cost_per_exe\\" value=\\"1077.44\\" target=\\"1909.00\\" delta=\\"-539.00\\" />
    </Component>
  </Component>
</Component>"
`;
